# i_o_people_traking

./: CMakeLists.txt  README.md
include/: image_ops.h  publisher.h
src/: main.cpp  publisher.cpp
